Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127413

Building failure with FEATURE_quick_shadereffect=OFF

    XMLWordPrintable

Details

    • 3029192d7 (dev), fcad8c1d6 (6.8), ee12b718d (6.7), 625dcfaf8 (tqtc/lts-6.5)

    Description

      When configuring with FEATURE_quick_shadereffect=OFF, build fails

      Configuration

       cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=None -DCMAKE_INSTALL_SYSCONFDIR=/etc -DCMAKE_INSTALL_LOCALSTATEDIR=/var -DCMAKE_EXPORT_NO_PACKAGE_REGISTRY=ON -DCMAKE_FIND_PACKAGE_NO_PACKAGE_REGISTRY=ON -DCMAKE_INSTALL_RUNSTATEDIR=/run -DCMAKE_SKIP_INSTALL_ALL_DEPENDENCY=ON -GNinja -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_LIBDIR=lib/x86_64-linux-gnu --log-level=STATUS -DCMAKE_INSTALL_PREFIX=/usr -DINSTALL_BINDIR=lib/qt-android-6.8-host/bin -DINSTALL_LIBDIR=lib/x86_64-linux-gnu/qt-android-6.8-host -DINSTALL_LIBEXECDIR=lib/x86_64-linux-gnu/qt-android-6.8-host/libexec -DINSTALL_ARCHDATADIR=lib/x86_64-linux-gnu/qt-android-6.8-host -DINSTALL_EXAMPLESDIR=lib/x86_64-linux-gnu/qt-android-6.8-host/examples -DINSTALL_DATADIR=share/qt-android-6.8-host -DINSTALL_DESCRIPTIONSDIR=share/qt-android-6.8-host/modules -DINSTALL_DOCDIR=share/qt-android-6.8-host/doc -DINSTALL_SYSCONFDIR=lib/qt-android-6.8-host/etc/xdg -DINSTALL_INCLUDEDIR=include/x86_64-linux-gnu/qt-android-6.8-host -DINSTALL_PLUGINSDIR=lib/x86_64-linux-gnu/qt-android-6.8-host/plugins -DINSTALL_TESTSDIR=lib/x86_64-linux-gnu/qt-android-6.8-host/tests -DINSTALL_TRANSLATIONSDIR=share/qt-android-6.8-host/translations -DINSTALL_MKSPECSDIR=lib/x86_64-linux-gnu/qt-android-6.8-host/mkspecs -DINSTALL_PUBLICBINDIR=lib/qt-android-6.8-host/bin -DBUILD_WITH_PCH=OFF -DBUILD_qt3d=OFF -DBUILD_qt5compat=OFF -DBUILD_qtactiveqt=OFF -DBUILD_qtbase=ON -DBUILD_qtcharts=OFF -DBUILD_qtcoap=OFF -DBUILD_qtconnectivity=OFF -DBUILD_qtdatavis3d=OFF -DBUILD_qtdeclarative=ON -DBUILD_qtdoc=OFF -DBUILD_qtgraphs=OFF -DBUILD_qtgrpc=OFF -DBUILD_qthttpserver=OFF -DBUILD_qtimageformats=OFF -DBUILD_qtlanguageserver=OFF -DBUILD_qtlocation=OFF -DBUILD_qtlottie=OFF -DBUILD_qtmqtt=OFF -DBUILD_qtmultimedia=OFF -DBUILD_qtnetworkauth=OFF -DBUILD_qtopcua=ON -DBUILD_qtpositioning=OFF -DBUILD_qtquick3d=ON -DBUILD_qtquick3dphysics=OFF -DBUILD_qtquickeffectmaker=OFF -DBUILD_qtquicktimeline=OFF -DBUILD_qtremoteobjects=ON -DBUILD_qtscxml=ON -DBUILD_qtsensors=OFF -DBUILD_qtserialbus=OFF -DBUILD_qtserialport=OFF -DBUILD_qtshadertools=ON -DBUILD_qtspeech=OFF -DBUILD_qtsvg=OFF -DBUILD_qttools=ON -DBUILD_qttranslations=OFF -DBUILD_qtvirtualkeyboard=OFF -DBUILD_qtwayland=OFF -DBUILD_qtwebchannel=OFF -DBUILD_qtwebengine=ON -DBUILD_qtwebsockets=OFF -DBUILD_qtwebview=OFF -DFEATURE_accessibility=OFF -DFEATURE_assistant=ON -DFEATURE_brotli=OFF -DFEATURE_calendarwidget=ON -DFEATURE_concurrent=ON -DFEATURE_contextmenu=ON -DFEATURE_cssparser=ON -DFEATURE_cups=OFF -DFEATURE_cursor=ON -DFEATURE_dbus=OFF -DFEATURE_designer=OFF -DFEATURE_egl=OFF -DFEATURE_evdev=OFF -DFEATURE_fontconfig=OFF -DFEATURE_fontdialog=OFF -DFEATURE_freetype=OFF -DFEATURE_gds=OFF -DFEATURE_gif=OFF -DFEATURE_glib=OFF -DFEATURE_graphicseffect=OFF -DFEATURE_graphicsview=ON -DFEATURE_gssapi=OFF -DFEATURE_gtk3=OFF -DFEATURE_harfbuzz=OFF -DFEATURE_http=OFF -DFEATURE_ico=OFF -DFEATURE_icu=OFF -DFEATURE_islamiccivilcalendar=OFF -DFEATURE_jalalicalendar=OFF -DFEATURE_jpeg=OFF -DFEATURE_libinput=OFF -DFEATURE_libinput_hires_wheel_support=OFF -DFEATURE_linuxfb=OFF -DFEATURE_movie=OFF -DFEATURE_mtdev=OFF -DFEATURE_network=ON -DFEATURE_open62541=OFF -DFEATURE_openssl=OFF -DFEATURE_pdf=ON -DFEATURE_pkg_config=OFF -DFEATURE_printsupport=ON -DFEATURE_qml_debug=ON -DFEATURE_qml_delegate_model=ON -DFEATURE_qml_jit=OFF -DFEATURE_qml_list_model=OFF -DFEATURE_qml_locale=ON -DFEATURE_qml_network=ON -DFEATURE_qml_preview=OFF -DFEATURE_qml_profiler=OFF -DFEATURE_qml_worker_script=OFF -DFEATURE_qml_xml_http_request=OFF -DFEATURE_qml_xmllistmodel=OFF -DFEATURE_qtpdf_build=OFF -DFEATURE_qtwebengine_build=OFF -DFEATURE_quick3d_assimp=OFF -DFEATURE_quick3dxr_openxr=OFF -DFEATURE_quick_designer=OFF -DFEATURE_quick_draganddrop=ON -DFEATURE_quick_particles=OFF -DFEATURE_quick_path=OFF -DFEATURE_quick_shadereffect=OFF -DFEATURE_quickcontrols2_basic=OFF -DFEATURE_quickcontrols2_fluentwinui3=OFF -DFEATURE_quickcontrols2_fusion=OFF -DFEATURE_quickcontrols2_imagine=OFF -DFEATURE_quickcontrols2_ios=OFF -DFEATURE_quickcontrols2_macos=OFF -DFEATURE_quickcontrols2_material=OFF -DFEATURE_quickcontrols2_universal=OFF -DFEATURE_quickcontrols2_windows=OFF -DFEATURE_quicktemplates2_calendar=OFF -DFEATURE_quicktemplates2_hover=OFF -DFEATURE_quicktemplates2_multitouch=OFF -DFEATURE_regularexpression=ON -DFEATURE_scxml_ecmascriptdatamodel=OFF -DFEATURE_sessionmanager=OFF -DFEATURE_sql=ON -DFEATURE_sql_db2=OFF -DFEATURE_sql_ibase=OFF -DFEATURE_sql_mysql=OFF -DFEATURE_sql_oci=OFF -DFEATURE_sql_odbc=OFF -DFEATURE_sql_psql=OFF -DFEATURE_sql_sqlite=ON -DFEATURE_sqlmodel=OFF -DFEATURE_ssl=OFF -DFEATURE_style_fusion=OFF -DFEATURE_style_stylesheet=ON -DFEATURE_style_windows=ON -DFEATURE_system_doubleconversion=ON -DFEATURE_system_libb2=ON -DFEATURE_system_open62541=OFF -DFEATURE_system_pcre2=ON -DFEATURE_system_png=ON -DFEATURE_system_zlib=ON -DFEATURE_testlib=OFF -DFEATURE_texthtmlparser=ON -DFEATURE_textmarkdownreader=OFF -DFEATURE_textmarkdownwriter=OFF -DFEATURE_textodfwriter=OFF -DFEATURE_tslib=OFF -DFEATURE_vnc=OFF -DFEATURE_vulkan=OFF -DFEATURE_widgets=ON -DFEATURE_xkbcommon=OFF -DFEATURE_xkbcommon_x11=OFF -DFEATURE_xlib=OFF -DFEATURE_xml=ON -DFEATURE_zstd=OFF -DINPUT_opengl=no -DCMAKE_BUILD_RPATH_USE_ORIGIN=ON ../..
      

       

      Output

      [3541/4610] /usr/lib/ccache/c++ -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_QUICK3D_LIB -DQT_CONCURRENT_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_QMLINTEGRATION_LIB -DQT_QMLMETA_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_QUICK3DRUNTIMERENDER_LIB -DQT_QUICK3DUTILS_LIB -DQT_QUICK_LIB -DQT_SHADERTOOLS_LIB -DQT_USE_QSTRINGBUILDER -DQuick3D_EXPORTS -D_GLIBCXX_ASSERTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtquick3d/src/quick3d/Quick3D_autogen/include -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3D -I/builds/bastif/qt-android/debian/output/source_dir/qtquick3d/src/quick3d -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtquick3d/src/quick3d -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3D/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3D/6.8.0/QtQuick3D -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtdeclarative/src/qml -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQml/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQml/6.8.0/QtQml -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/src/corelib -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtCore/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtCore/6.8.0/QtCore -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtCore -I/builds/bastif/qt-android/debian/output/source_dir/qtbase/mkspecs/linux-g++ -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQml -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlIntegration -I/builds/bastif/qt-android/debian/output/source_dir/qtdeclarative/src/qmlintegration -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtdeclarative/src/qmlintegration -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtNetwork -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtGui -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlMeta -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlModels -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DRuntimeRender -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DUtils -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtShaderTools -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtConcurrent -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/src/gui -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtGui/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtGui/6.8.0/QtGui -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtquick3d/src/runtimerender -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DRuntimeRender/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DRuntimeRender/6.8.0/QtQuick3DRuntimeRender -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtquick3d/src/utils -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DUtils/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DUtils/6.8.0/QtQuick3DUtils -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtdeclarative/src/quick -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick/6.8.0/QtQuick -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtdeclarative/src/qmlmodels -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlModels/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlModels/6.8.0/QtQmlModels -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlMeta/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlMeta/6.8.0/QtQmlMeta -g -O2 -ffile-prefix-map=/builds/bastif/qt-android/debian/output/source_dir=. -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -fPIC -U_FORTIFY_SOURCE -Wsuggest-override -fcf-protection=full -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -std=c++17 -MD -MT qtquick3d/src/quick3d/CMakeFiles/Quick3D.dir/qquick3dtexture.cpp.o -MF qtquick3d/src/quick3d/CMakeFiles/Quick3D.dir/qquick3dtexture.cpp.o.d -o qtquick3d/src/quick3d/CMakeFiles/Quick3D.dir/qquick3dtexture.cpp.o -c /builds/bastif/qt-android/debian/output/source_dir/qtquick3d/src/quick3d/qquick3dtexture.cpp
      FAILED: qtquick3d/src/quick3d/CMakeFiles/Quick3D.dir/qquick3dtexture.cpp.o 
      /usr/lib/ccache/c++ -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_QUICK3D_LIB -DQT_CONCURRENT_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_QMLINTEGRATION_LIB -DQT_QMLMETA_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_QUICK3DRUNTIMERENDER_LIB -DQT_QUICK3DUTILS_LIB -DQT_QUICK_LIB -DQT_SHADERTOOLS_LIB -DQT_USE_QSTRINGBUILDER -DQuick3D_EXPORTS -D_GLIBCXX_ASSERTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtquick3d/src/quick3d/Quick3D_autogen/include -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3D -I/builds/bastif/qt-android/debian/output/source_dir/qtquick3d/src/quick3d -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtquick3d/src/quick3d -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3D/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3D/6.8.0/QtQuick3D -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtdeclarative/src/qml -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQml/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQml/6.8.0/QtQml -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/src/corelib -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtCore/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtCore/6.8.0/QtCore -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtCore -I/builds/bastif/qt-android/debian/output/source_dir/qtbase/mkspecs/linux-g++ -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQml -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlIntegration -I/builds/bastif/qt-android/debian/output/source_dir/qtdeclarative/src/qmlintegration -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtdeclarative/src/qmlintegration -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtNetwork -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtGui -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlMeta -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlModels -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DRuntimeRender -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DUtils -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtShaderTools -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtConcurrent -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/src/gui -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtGui/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtGui/6.8.0/QtGui -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtquick3d/src/runtimerender -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DRuntimeRender/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DRuntimeRender/6.8.0/QtQuick3DRuntimeRender -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtquick3d/src/utils -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DUtils/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick3DUtils/6.8.0/QtQuick3DUtils -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtdeclarative/src/quick -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQuick/6.8.0/QtQuick -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtdeclarative/src/qmlmodels -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlModels/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlModels/6.8.0/QtQmlModels -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlMeta/6.8.0 -I/builds/bastif/qt-android/debian/output/source_dir/debian/build-host/qtbase/include/QtQmlMeta/6.8.0/QtQmlMeta -g -O2 -ffile-prefix-map=/builds/bastif/qt-android/debian/output/source_dir=. -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -fPIC -U_FORTIFY_SOURCE -Wsuggest-override -fcf-protection=full -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -std=c++17 -MD -MT qtquick3d/src/quick3d/CMakeFiles/Quick3D.dir/qquick3dtexture.cpp.o -MF qtquick3d/src/quick3d/CMakeFiles/Quick3D.dir/qquick3dtexture.cpp.o.d -o qtquick3d/src/quick3d/CMakeFiles/Quick3D.dir/qquick3dtexture.cpp.o -c /builds/bastif/qt-android/debian/output/source_dir/qtquick3d/src/quick3d/qquick3dtexture.cpp
      ../../qtquick3d/src/quick3d/qquick3dtexture.cpp: In member function ‘virtual QSSGRenderGraphObject* QQuick3DTexture::updateSpatialNode(QSSGRenderGraphObject*)’:
      ../../qtquick3d/src/quick3d/qquick3dtexture.cpp:1181:51: error: invalid use of incomplete type ‘class QSGTextureProvider’
       1181 |                 imageNode->m_qsgTexture = provider->texture();
            |                                                   ^~
      In file included from qtbase/include/QtQuick/qquickitem.h:1,
                       from /builds/bastif/qt-android/debian/output/source_dir/qtdeclarative/src/quick/items/qquickpainteditem.h:7,
                       from qtbase/include/QtQuick/qquickpainteditem.h:1,
                       from /builds/bastif/qt-android/debian/output/source_dir/qtdeclarative/src/quick/scenegraph/qsgadaptationlayer_p.h:20,
                       from qtbase/include/QtQuick/6.8.0/QtQuick/private/qsgadaptationlayer_p.h:1,
                       from ../../qtquick3d/src/quick3d/qquick3dtexture_p.h:21,
                       from ../../qtquick3d/src/quick3d/qquick3dtexture.cpp:4:
      /builds/bastif/qt-android/debian/output/source_dir/qtdeclarative/src/quick/items/qquickitem.h:58:7: note: forward declaration of ‘class QSGTextureProvider’
         58 | class QSGTextureProvider;
            |       ^~~~~~~~~~~~~~~~~~
      ../../qtquick3d/src/quick3d/qquick3dtexture.cpp:1184:86: error: incomplete type ‘QSGTextureProvider’ used in nested name specifier
       1184 |                 m_textureProviderConnection = connect(provider, &QSGTextureProvider::textureChanged, this, [this, provider] () {
            |                                                                                      ^~~~~~~~~~~~~~
      ../../qtquick3d/src/quick3d/qquick3dtexture.cpp: In lambda function:
      ../../qtquick3d/src/quick3d/qquick3dtexture.cpp:1194:55: error: invalid use of incomplete type ‘class QSGTextureProvider’
       1194 |                     imageNode->m_qsgTexture = provider->texture();
            |                                                       ^~
      In file included from qtbase/include/QtQuick/qquickitem.h:1,
                       from /builds/bastif/qt-android/debian/output/source_dir/qtdeclarative/src/quick/items/qquickpainteditem.h:7,
                       from qtbase/include/QtQuick/qquickpainteditem.h:1,
                       from /builds/bastif/qt-android/debian/output/source_dir/qtdeclarative/src/quick/scenegraph/qsgadaptationlayer_p.h:20,
                       from qtbase/include/QtQuick/6.8.0/QtQuick/private/qsgadaptationlayer_p.h:1,
                       from ../../qtquick3d/src/quick3d/qquick3dtexture_p.h:21,
                       from ../../qtquick3d/src/quick3d/qquick3dtexture.cpp:4:
      /builds/bastif/qt-android/debian/output/source_dir/qtdeclarative/src/quick/items/qquickitem.h:58:7: note: forward declaration of ‘class QSGTextureProvider’
         58 | class QSGTextureProvider;
            |       ^~~~~~~~~~~~~~~~~~
      
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            inho Inho Lee
            ban F S
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes