add include for QSGTextureProvider

without FEATURE_quick_shadereffect,
QSGTextureProvider cannot be used.

Fixes: QTBUG-127413
Pick-to: 6.7 6.5
Change-Id: Ibdf29f820358beb23f59fa891a0ff38ca79d38ce
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
(cherry picked from commit 3029192d7d098babf7a98d73fecd4fa6f6d8bd89)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>